// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Directed Acyclic Graph Component no wrapper, with dummy props (emulating super simple package.json) & default theme 1`] = `
<svg
  className="dag-wrapper Dag-root-1"
  height={500}
  width={500}
>
  <g
    className="graph"
  >
    <line
      className="connect-node Dag-dagEdge-4"
      onClick={[Function]}
    />
    <g
      className="node Dag-dagNode-2"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-3"
      />
    </g>
    <g
      className="node Dag-dagNode-2"
      onClick={[Function]}
    >
      <circle />
      <text
        className="Dag-dagNodeText-3"
      />
    </g>
  </g>
</svg>
`;

exports[`Storyshots Directed Acyclic Graph Component with paper wrapper, dummy props & dark theme 1`] = `
<div
  className="MuiPaper-root-38 MuiPaper-elevation2-42 MuiPaper-rounded-39"
  style={
    Object {
      "height": "500px",
      "width": "500px",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-65"
    height={500}
    width={500}
  >
    <g
      className="graph"
    >
      <line
        className="connect-node Dag-dagEdge-68"
        onClick={[Function]}
      />
      <g
        className="node Dag-dagNode-66"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-67"
        />
      </g>
      <g
        className="node Dag-dagNode-66"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-67"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Directed Acyclic Graph Component with paper wrapper, dummy props & light theme 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7"
  style={
    Object {
      "height": "500px",
      "width": "500px",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-33"
    height={500}
    width={500}
  >
    <g
      className="graph"
    >
      <line
        className="connect-node Dag-dagEdge-36"
        onClick={[Function]}
      />
      <g
        className="node Dag-dagNode-34"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-35"
        />
      </g>
      <g
        className="node Dag-dagNode-34"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-35"
        />
      </g>
    </g>
  </svg>
</div>
`;
